# clearpath_common

./: .gitignore  LICENSE  dependencies.repos  rosdep.yaml  setup_udev.bash  stack.xml
clearpath_base/: CHANGELOG.rst  CMakeLists.txt  example.launch  mainpage.dox  manifest.xml  package.xml  setup.py
clearpath_base/msg/: AckermannSetpt.msg  ClearpathRobot.msg  DifferentialControl.msg  DifferentialSpeed.msg  DistanceTiming.msg  Encoder.msg  Encoders.msg  FirmwareInfo.msg  JoySwitch.msg  Magnetometer.msg  Orientation.msg  PlatformInfo.msg  PlatformName.msg  PowerSource.msg  PowerStatus.msg  ProcessorStatus.msg  RawEncoders.msg  SafetyStatus.msg  StateChange.msg  SystemStatus.msg  TurnSetpt.msg  VelocitySetpt.msg
clearpath_base/src/: base.py  data.py  kinematic.py  raw.py  torque.py
clearpath_base/src/clearpath/: __init__.py  __main__.py  cli.py  utils.py
clearpath_base/udev/: clearpath.rules
clearpath_bringup/: CHANGELOG.rst  CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
clearpath_bringup/src/: warn.py
clearpath_bringup/upstart/: README  clearpath-boot.conf  clearpath-start  clearpath-stop  clearpath.conf  clearpath.launch  install.bash  uninstall.bash
clearpath_common/: CHANGELOG.rst  CMakeLists.txt  package.xml
clearpath_control/: CHANGELOG.rst  CMakeLists.txt  package.xml
clearpath_control/config/: twist_mux.yaml
clearpath_control/config/a200/: control.yaml  empty.yaml  imu_filter.yaml  localization.yaml  teleop_interactive_markers.yaml  teleop_logitech.yaml  teleop_ps4.yaml
clearpath_control/config/dd100/: control.yaml  teleop_interactive_markers.yaml  teleop_ps4.yaml
clearpath_control/config/dd150/: control.yaml  teleop_interactive_markers.yaml  teleop_logitech.yaml
clearpath_control/config/do100/: control.yaml  teleop_interactive_markers.yaml  teleop_logitech.yaml  teleop_ps4.yaml
clearpath_control/config/do150/: control.yaml  teleop_interactive_markers.yaml  teleop_ps4.yaml
clearpath_control/config/generic/: teleop_interactive_markers.yaml  teleop_ps4.yaml
clearpath_control/config/j100/: control.yaml  localization.yaml  teleop_interactive_markers.yaml  teleop_logitech.yaml  teleop_ps4.yaml
clearpath_control/config/r100/: control.yaml  teleop_interactive_markers.yaml  teleop_ps4.yaml
clearpath_control/config/w200/: control.yaml  localization.yaml  teleop_interactive_markers.yaml  teleop_logitech.yaml  teleop_ps4.yaml
clearpath_control/launch/: control.launch.py  localization.launch.py  teleop_base.launch.py  teleop_joy.launch.py
clearpath_description/: CHANGELOG.rst  CMakeLists.txt  package.xml
clearpath_description/launch/: description.launch.py
clearpath_description/urdf/: husky_macro.urdf.xacro
clearpath_description/urdf/husky/: decorations.urdf.xacro  empty.urdf  husky.urdf.xacro  wheel.urdf.xacro
clearpath_description/urdf/jackal/: accessories.urdf.xacro  empty.urdf  jackal.urdf.xacro
clearpath_description_generator/: CMakeLists.txt  package.xml  setup.cfg  setup.py
clearpath_description_generator/clearpath_description_generator/: __init__.py  description_generator  description_generator.py  mount_description.py  xacro_writer.py
clearpath_description_generator/clearpath_description_generator/description/: __init__.py  decorations.py  mounts.py  platform.py  sensors.py
clearpath_generator_common/: CHANGELOG.rst  CMakeLists.txt  package.xml
clearpath_generator_common/clearpath_generator_common/: common.py  ros.py
clearpath_generator_common/clearpath_generator_common/bash/: generate_bash  generator.py  writer.py
clearpath_generator_common/clearpath_generator_common/description/: accessories.py  (+10 more)
clearpath_generator_common/debian/: install
clearpath_generator_common/src/: moveit_collision_updater.cpp
clearpath_generator_common/test/: test_generator_bash.py  test_generator_description.py  test_generator_discovery_server.py
clearpath_manipulators/: CHANGELOG.rst  CMakeLists.txt  package.xml
clearpath_manipulators/config/: control.yaml  planning_scene.yaml  trajectory_execution.yaml
clearpath_manipulators/launch/: control.launch.py  manipulators.launch.py  moveit.launch.py
clearpath_manipulators/src/: gazebo_to_real_gripper_node.cpp  gazebo_to_real_robot_node.cpp
clearpath_manipulators_description/: CHANGELOG.rst  CMakeLists.txt  package.xml
clearpath_manipulators_description/launch/: description.launch.py
clearpath_mounts_description/: CHANGELOG.rst  CMakeLists.txt  package.xml
clearpath_mounts_description/meshes/: disk.stl  fath_pivot_mount.dae  fath_pivot_mount_base.dae
clearpath_mounts_description/urdf/: common.urdf.xacro  disk.urdf.xacro  fath_pivot.urdf.xacro  fath_pivot_mount.urdf.xacro  novatel_smart7_stand.urdf.xacro  post.urdf.xacro  sick.urdf.xacro
clearpath_platform/: CHANGELOG.rst  CMakeLists.txt  j100_hardware.xml  package.xml
clearpath_platform/config/: imu_filter.yaml
clearpath_platform/launch/: platform.launch.py
clearpath_platform/src/: a200_hardware.cpp  a200_status.cpp  j100_hardware.cpp  j100_hardware_interface.cpp
clearpath_platform_description/: CHANGELOG.rst  CMakeLists.txt  package.xml
clearpath_platform_description/launch/: description.launch.py
clearpath_platform_description/urdf/: common.urdf.xacro
clearpath_sensors_description/: CHANGELOG.rst  CMakeLists.txt  package.xml
clearpath_sensors_description/meshes/: swift_antenna.stl
clearpath_sensors_description/urdf/: chrobotics_um6.urdf.xacro  flir_blackfly.urdf.xacro  garmin_18x.urdf.xacro  hokuyo_ust.urdf.xacro  hokuyo_ust10.urdf.xacro  intel_realsense.urdf.xacro  luxonis_oakd.urdf.xacro  microstrain_gq7.urdf.xacro  microstrain_imu.urdf.xacro  novatel_smart6.urdf.xacro  novatel_smart7.urdf.xacro  phidgets_spatial.urdf.xacro  redshift_um7.urdf.xacro  sick_lms1xx.urdf.xacro  stereolabs_zed.urdf.xacro  swiftnav_duro.urdf.xacro  ust10.urdf.xacro  velodyne_lidar.urdf.xacro
clearpath_teleop/: CHANGELOG.rst  CMakeLists.txt  example.launch  mainpage.dox  manifest.xml  package.xml  teleop.launch  teleop_r200.launch  teleop_r200_arduino.launch  teleop_turtle.launch
clearpath_teleop/src/: teleop.py
(+326 files in other folders)
