<?xml version="1.0"?>
<package>
  <name>clearpath_bringup</name>
  <version>0.3.0</version>
  <description>
    The clearpath_bringup package provides a simple warn node.
  </description>

  <author email="mpurvis@clearpathrobotics.com">Mike Purvis</author>
  <maintainer email="abencz@clearpathrobotics.com">Alex Bencz</maintainer>
  <license>BSD</license>

  <url type="website">http://ros.org/wiki/clearpath_bringup</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
  </export>
</package>
