<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>clearpath_description</name>
  <version>0.2.9</version>
  <description>Clearpath URDF descriptions metapackage</description>

  <author email="lcamero@clearpathrobotics.com">Luis Camero</author>
  <author email="rkreinin@clearpathrobotics.com">Roni Kreinin</author>
  <author email="tbaltovski@clearpathrobotics.com">Tony Baltovski</author>

  <maintainer email="lcamero@clearpathrobotics.com">Luis Camero</maintainer>
  <maintainer email="rkreinin@clearpathrobotics.com">Roni Kreinin</maintainer>
  <maintainer email="tbaltovski@clearpathrobotics.com">Tony Baltovski</maintainer>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>clearpath_mounts_description</exec_depend>
  <exec_depend>clearpath_platform_description</exec_depend>
  <exec_depend>clearpath_sensors_description</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
