<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>clearpath_generator_common</name>
  <version>0.2.9</version>
  <description>Clearpath Common Generator</description>
  <maintainer email="lcamero@clearpathrobotics.com">Luis Camero</maintainer>
  <maintainer email="rkreinin@clearpathrobotics.com">Roni Kreinin</maintainer>
  <maintainer email="tbaltovski@clearpathrobotics.com">Tony Baltovski</maintainer>

  <license>BSD</license>

  <author email="rkreinin@clearpathrobotics.com">rkreinin</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>clearpath_config</exec_depend>
  <exec_depend>clearpath_control</exec_depend>
  <exec_depend>clearpath_description</exec_depend>
  <exec_depend>clearpath_platform</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
