<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>clearpath_manipulators</name>
  <version>0.2.6</version>
  <description>MoveIt configuration built around Clearpath Configuration</description>

  <author email="lcamero@clearpathrobotics.com">Luis Camero</author>

  <maintainer email="lcamero@clearpathrobotics.com">Luis Camero</maintainer>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>moveit_planners_chomp</exec_depend>
  <exec_depend>clearpath_manipulators_description</exec_depend>
  <exec_depend>gripper_controllers</exec_depend>
  <exec_depend>moveit_configs_utils</exec_depend>
  <exec_depend>moveit_kinematics</exec_depend>
  <exec_depend>moveit_planners</exec_depend>
  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>moveit_ros_warehouse</exec_depend>
  <exec_depend>moveit_simple_controller_manager</exec_depend>
  <exec_depend>position_controllers</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
